--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div>
+            <h3>수선화식당</h3><span class="menu">순대</span>
+        </div>
+        <div>영업 중 <span class="time">21:00 까지</span></div>
+        <div class="img-container">
+            <img src="./img/순대국밥.png" alt="">
+            <img src="./img/순대국밥 2.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
