--- a/index.html
+++ b/index.html
@@ -5,15 +5,130 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>게시판</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
-    table { border-collapse: collapse; width: 100%; margin-bottom: 20px; }
-    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    .pagination { margin-top: 20px; }
-    .pagination button { margin: 0 2px; }
-    .form-section { margin-bottom: 30px; }
-    .form-section input, .form-section textarea { margin: 5px 0; width: 100%; }
-    .actions button { margin-right: 5px; }
+    body {
+      font-family: 'Segoe UI', 'Apple SD Gothic Neo', Arial, sans-serif;
+      margin: 0;
+      background: #f7f8fa;
+      color: #222;
+    }
+    h1 {
+      text-align: center;
+      margin-top: 40px;
+      color: #2d5be3;
+      letter-spacing: 2px;
+    }
+    .form-section {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+      max-width: 500px;
+      margin: 30px auto 40px auto;
+      padding: 32px 28px 24px 28px;
+    }
+    .form-section h2 {
+      margin-top: 0;
+      color: #2d5be3;
+      font-size: 1.2em;
+      margin-bottom: 18px;
+    }
+    .form-section input, .form-section textarea {
+      margin: 8px 0 16px 0;
+      width: 100%;
+      padding: 10px 12px;
+      border: 1px solid #d0d7de;
+      border-radius: 6px;
+      font-size: 1em;
+      background: #f9fafb;
+      transition: border 0.2s;
+    }
+    .form-section input:focus, .form-section textarea:focus {
+      border: 1.5px solid #2d5be3;
+      outline: none;
+      background: #fff;
+    }
+    .form-section button {
+      background: linear-gradient(90deg, #2d5be3 60%, #4f8cff 100%);
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      padding: 10px 28px;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 1px 4px rgba(45,91,227,0.08);
+      transition: background 0.2s;
+    }
+    .form-section button:hover {
+      background: linear-gradient(90deg, #1b3e8a 60%, #2d5be3 100%);
+    }
+    table {
+      border-collapse: separate;
+      border-spacing: 0;
+      width: 90%;
+      margin: 0 auto 30px auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+      overflow: hidden;
+    }
+    th, td {
+      padding: 14px 12px;
+      text-align: left;
+    }
+    th {
+      background: #eaf1ff;
+      color: #2d5be3;
+      font-weight: 600;
+      border-bottom: 2px solid #d0d7de;
+    }
+    tr:not(:last-child) td {
+      border-bottom: 1px solid #f0f1f3;
+    }
+    tr:hover td {
+      background: #f5f8ff;
+      transition: background 0.2s;
+    }
+    .actions button {
+      background: #fff;
+      color: #2d5be3;
+      border: 1px solid #2d5be3;
+      border-radius: 5px;
+      padding: 6px 16px;
+      font-size: 0.97em;
+      font-weight: 500;
+      margin-right: 6px;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    .actions button:hover {
+      background: #2d5be3;
+      color: #fff;
+    }
+    .pagination {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    .pagination button {
+      background: #fff;
+      color: #2d5be3;
+      border: 1px solid #2d5be3;
+      border-radius: 5px;
+      padding: 6px 14px;
+      margin: 0 2px;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    .pagination button:disabled {
+      background: #2d5be3;
+      color: #fff;
+      font-weight: bold;
+      cursor: default;
+    }
+    @media (max-width: 700px) {
+      .form-section, table { width: 98%; }
+      th, td { font-size: 0.97em; padding: 10px 6px; }
+    }
   </style>
 </head>
 <body>
@@ -99,12 +214,17 @@
       const bookName = document.getElementById('bookName').value;
       const bookDesc = document.getElementById('bookDesc').value;
 
-      // 중복 책 이름 체크
+      // 중복 책 이름/번호 체크
       const res = await fetch(`${API_URL}?page=1&pageSize=1000`);
       const data = await res.json();
-      const exists = (data.data || []).some(book => (book.bookName || book.title) === bookName);
-      if (exists) {
+      const existsName = (data.data || []).some(book => (book.bookName || book.title) === bookName);
+      if (existsName) {
         alert('같은 이름의 책이 이미 등록되어 있습니다.');
+        return;
+      }
+      const existsNumber = (data.data || []).some(book => (book.bookNumber || book.id) === bookNumber);
+      if (existsNumber) {
+        alert('같은 번호의 책이 이미 등록되어 있습니다.');
         return;
       }
 
